ANTLR4/EarleyParser/GrammatikParser.java
// Generated from Grammatik.g4 by ANTLR 4.1

    import java.util.List;
    import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammatikParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__4=1, T__3=2, T__2=3, T__1=4, T__0=5, VAR=6, TOKEN=7, LITERAL=8, WS=9;
	public static final String[] tokenNames = {
		"<INVALID>", "'*/'", "':'", "'|'", "';'", "'/*'", "VAR", "TOKEN", "LITERAL", 
		"WS"
	};
	public static final int
		RULE_cfg = 0, RULE_grammarRule = 1, RULE_body = 2, RULE_item = 3, RULE_comment = 4;
	public static final String[] ruleNames = {
		"cfg", "grammarRule", "body", "item", "comment"
	};

	@Override
	public String getGrammarFileName() { return "Grammatik.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammatikParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CfgContext extends ParserRuleContext {
		public Grammar g;
		public GrammarRuleContext r;
		public List<GrammarRuleContext> grammarRule() {
			return getRuleContexts(GrammarRuleContext.class);
		}
		public GrammarRuleContext grammarRule(int i) {
			return getRuleContext(GrammarRuleContext.class,i);
		}
		public CfgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cfg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterCfg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitCfg(this);
		}
	}

	public final CfgContext cfg() throws RecognitionException {
		CfgContext _localctx = new CfgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_cfg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List<Rule> rules = new ArrayList<Rule>(); 
			setState(14); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(11); ((CfgContext)_localctx).r = grammarRule();
				 rules.add(((CfgContext)_localctx).r.regel); 
				}
				}
				setState(16); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VAR );
			 ((CfgContext)_localctx).g =  new Grammar(rules); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarRuleContext extends ParserRuleContext {
		public Rule regel;
		public Token v;
		public BodyContext b;
		public BodyContext c;
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public TerminalNode VAR() { return getToken(GrammatikParser.VAR, 0); }
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public GrammarRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterGrammarRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitGrammarRule(this);
		}
	}

	public final GrammarRuleContext grammarRule() throws RecognitionException {
		GrammarRuleContext _localctx = new GrammarRuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammarRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List<Body> bodyList = new ArrayList<Body>(); 
			setState(21); ((GrammarRuleContext)_localctx).v = match(VAR);
			setState(22); match(2);
			setState(23); ((GrammarRuleContext)_localctx).b = body();
			 bodyList.add(((GrammarRuleContext)_localctx).b.b); 
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==3) {
				{
				{
				setState(25); match(3);
				setState(26); ((GrammarRuleContext)_localctx).c = body();
				 bodyList.add(((GrammarRuleContext)_localctx).c.b); 
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34); match(4);
			 ((GrammarRuleContext)_localctx).regel =  new Rule((((GrammarRuleContext)_localctx).v!=null?((GrammarRuleContext)_localctx).v.getText():null), bodyList); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public Body b;
		public ItemContext item;
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public ItemContext item(int i) {
			return getRuleContext(ItemContext.class,i);
		}
		public List<ItemContext> item() {
			return getRuleContexts(ItemContext.class);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_body);
		int _la;
		try {
			setState(51);
			switch (_input.LA(1)) {
			case 3:
			case 4:
			case VAR:
			case TOKEN:
			case LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				 List<Item> l = new ArrayList<Item>(); 
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << TOKEN) | (1L << LITERAL))) != 0)) {
					{
					{
					setState(38); ((BodyContext)_localctx).item = item();
					 l.add(((BodyContext)_localctx).item.element); 
					}
					}
					setState(45);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((BodyContext)_localctx).b =  new Body(l); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 2);
				{
				 List<Item> l = new ArrayList<Item>(); 
				setState(48); comment();
				 ((BodyContext)_localctx).b =  new Body(l); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemContext extends ParserRuleContext {
		public Item element;
		public Token VAR;
		public Token TOKEN;
		public Token LITERAL;
		public TerminalNode LITERAL() { return getToken(GrammatikParser.LITERAL, 0); }
		public TerminalNode VAR() { return getToken(GrammatikParser.VAR, 0); }
		public TerminalNode TOKEN() { return getToken(GrammatikParser.TOKEN, 0); }
		public ItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitItem(this);
		}
	}

	public final ItemContext item() throws RecognitionException {
		ItemContext _localctx = new ItemContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_item);
		try {
			setState(59);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(53); ((ItemContext)_localctx).VAR = match(VAR);
				 ((ItemContext)_localctx).element =  new Variable((((ItemContext)_localctx).VAR!=null?((ItemContext)_localctx).VAR.getText():null)    ); 
				}
				break;
			case TOKEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(55); ((ItemContext)_localctx).TOKEN = match(TOKEN);
				 ((ItemContext)_localctx).element =  new MyToken( (((ItemContext)_localctx).TOKEN!=null?((ItemContext)_localctx).TOKEN.getText():null)  ); 
				}
				break;
			case LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(57); ((ItemContext)_localctx).LITERAL = match(LITERAL);
				 ((ItemContext)_localctx).element =  new Literal( (((ItemContext)_localctx).LITERAL!=null?((ItemContext)_localctx).LITERAL.getText():null)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitComment(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comment);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61); match(5);
			setState(65);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(62);
					matchWildcard();
					}
					} 
				}
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(68); match(1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}